- Fix for Overusage Report
- FileZilla fix to set FileAppend when creating/modifying accounts. NOTE: Filezilla Server needs to support FileAppend which does work on versions 0.9.45 or greater - Jose Ribeiro
- (RDS) When RDSH is unavailable it will no longer throw a error on RDS Servers page but show as "Unable to connect" under IP Address
- (RDS) Duplicate RDS server checks

KNOWN Issues:

RDS 2019: Remote Applications tab broken due to RemoteServer powershell module issue https://github.com/PowerShell/xRemoteDesktopSessionHost/issues/56

Version 1.4.2
Thank you to all contributors on this release with a special thanks to Genadij Judin and Frans Rampen on large contributions in this release.
- Hosted Organization fix for asp.net v2.0 module.
- (VPS2012/2016/2019) Moved VM generation to template.
- (VPS2012/2016/2019) Added RAM and HDD tracking for VM (Linux support).
- (VPS2012/2016/2019) Added re-installation of VMs.
- (VPS2012/2016/2019) Added vhd file check.
- (VPS2012/2016/2019) Added random symbols folder generator.
- (VPS2012/2016/2019) Added TimeStamp for Re-install.
- (VPS2012/2016/2019) Added Secure boot option to template.
- (VPS2012/2016/2019) Added automatic generation of VM hostname (HyperV service settings).
- (VPS2012/2016/2019) Added VM config version chooser (HyperV service settings).
- (VPS2012/2016/2019) Added a simple install/reinstall queue for VMs.
- (VPS2012/2016/2019) Added VHDX block size control to template.
- (VPS2012/2016/2019) Added custom MAC address.
- (VPS2012/2016/2019) Added progress indicator when creating a VM.
- (VPS2012/2016/2019) Added asynchronous VM deletion.
- (VPS2012/2016/2019) Added maintenance mode (HyperV service settings).
- (VPS2012/2016/2019) Added an alternative more faster method for getting VM switches.
- (VPS2012/2016/2019) Added the ability to change the provider in HyperV settings.
- (VPS2012/2016/2019) Added support for External Network over Internal (not recommended option).